# monkey-typer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/: words.txt
gameSettings/: gameSettings.hpp
gameWindow/: gameWindow.cpp  gameWindow.hpp
settingsWindow/: settingsWindow.cpp  settingsWindow.hpp
utils/: utils.cpp  utils.hpp
utils/button/: button.cpp  button.hpp
utils/textField/: textField.cpp  textField.hpp
utils/word/: word.cpp  word.hpp
